--- a/package.json
+++ b/package.json
@@ -13,20 +13,35 @@
     "@types/node": "^20.8.9",
     "@types/react": "^18.2.32",
     "@types/react-dom": "^18.2.14",
+    "ajv": "^8.17.1",
+    "ajv-keywords": "^5.1.0",
     "autoprefixer": "^10.4.16",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
+    "firebase": "^10.14.0",
     "framer-motion": "^10.12.16",
-    "next": "^13.5.6",
+    "next": "^14.2.15",
     "next-themes": "^0.2.1",
+    "node": "^20.18.0",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
+    "react-router": "^6.26.2",
     "swiper": "^9.3.2",
     "tailwindcss": "^3.3.5",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "undici": "^6.20.0",
+    "webpack": "^5.95.0"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.25.7",
+    "@babel/preset-env": "^7.25.7",
+    "@babel/preset-react": "^7.25.7",
+    "babel-loader": "^9.2.1",
+    "node-polyfill-webpack-plugin": "^4.0.0",
+    "react-app-rewired": "^2.2.1"
   }
 }
