--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "@babel/preset-env": "^7.25.7",
     "@babel/preset-react": "^7.25.7",
     "babel-loader": "^9.2.1",
-    "node-polyfill-webpack-plugin": "^4.0.0",
-    "react-app-rewired": "^2.2.1"
+    "node-polyfill-webpack-plugin": "^4.0.0"
   }
 }
+
+
