--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "prettier-plugin-tailwindcss": "^0.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-router": "^6.26.2",
     "swiper": "^9.3.2",
@@ -44,5 +45,3 @@
     "node-polyfill-webpack-plugin": "^4.0.0"
   }
 }
-
-
