--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.53.0",
     "react-hot-toast": "^2.4.1",
     "react-router": "^6.26.2",
+    "react-router-dom": "^7.4.0",
     "swiper": "^9.3.2",
     "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2",
